# mas-pay-io

./: LICENSE  Makefile  README.md  config.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: pythonapp.yml
mas_employees/: __init__.py  assets.py  example.sqlite  models.py
mas_employees/employees/: employees.py
mas_employees/employees/templates/: employees.jinja2
mas_employees/home/: home.py
mas_employees/home/static/less/: home.less
mas_employees/home/templates/: index.jinja2
mas_employees/products/: products.py
mas_employees/profile/templates/: profile.jinja2
mas_employees/templates/: layout.jinja2  navigation.jinja2
