[tool.poetry]
name = "pay_mas_io"
version = "1.0.1"
description = "Employees Payment Application"
authors = ["Frederik Rodriguez <frederik88917@gmail.com>"]
maintainers = ["Frederik Rodriguez <frederik88917@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/Kuraokami/mas-pay-io"
documentation = ""
keywords = [
    "Flask",
    "Blueprints",
    "Framework",
    "Python",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask_assets = "*"
flask_sqlalchemy = "*"
faker = "*"
requests = "*"
python-dotenv = "*"
uwsgi = "^2.0.19"
ddtrace = "^0.48.2"

[tool.poetry.dev-dependencies]
lesscpy = "*"
cssmin = "*"
jsmin = "*"
pytest = "*"
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.8.3"

[tool.poetry.scripts]
run = "wsgi:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

